# lmsbridge

./: .env.example  .gitignore  ADOPTERS.md  CITATION.cff  COMMERCIAL.md  Makefile  PUBLISHING.md  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml  railway.toml  tmp_seed_check.db-journal
backend/alembic/: env.py
backend/alembic/versions/: 0a0d1fc304c5_tenants_byo_ai_config_tenant_links.py  1cad808c861d_materials_rubric_detail_grounding.py  334169a5735a_leads.py  4f91f26cce22_user_is_platform_admin_flag.py  5ce2c05f82e5_lti_1_3_registrations_deployments_.py  8df222faf2b2_tutor_session_messages.py  97677892a09c_initial_schema.py  a2b3c4d5e6f7_tenant_default_locale.py  a6b7c8d9e0f1_drop_sage_qa_tables.py  a7c3licensing01_tenant_license_fields.py  b1c2d3e4f5a6_course_lti_memberships_url.py  b7c8d9e0f1a2_profile_syllabus_materials.py  c2d3e4f5a6b7_course_lti_lineitems_url.py  c8d9e0f1a2b3_question_qtype.py  d3e4f5a6b7c8_course_lms_provider_ref.py  d9e0f1a2b3c4_sage_announcements_due_at.py  dddc2dee9312_assessment_adaptive_enabled_toggle.py  e0f1a2b3c4d5_tutor_message_choices.py  (+4 more)
backend/app/: main.py
backend/tests/: conftest.py  test_adaptive_toggle.py  test_admin_roles.py  test_api_flow.py  test_canvas_import.py  test_course_mgmt.py  test_health.py  test_install_simplicity.py  test_instructor_views.py  test_leads.py  test_licensing.py  test_llm_mock.py  test_lti.py  test_lti_integration.py  test_mastery.py  test_materials.py  test_pipeline.py  test_sage.py  test_tenant_ai.py  test_tutor_session.py
(+177 files in other folders)
