[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lms-bridge"
version = "0.1.0"
description = "LMS Bridge: AI-guided adaptive learning & just-in-time remediation for STEM courses"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "tenacity>=8.2",
    "pypdf>=4.2",
    "python-docx>=1.1",
    # LLM provider SDKs are bundled so switching LLM_PROVIDER is an env change only.
    # (openai also powers the azure_openai provider.)
    "anthropic>=0.39",
    "openai>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9,<1.12",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
plugins = []
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
